mobile layout overflow fix

--- a/src/styles/settings/_base.scss
+++ b/src/styles/settings/_base.scss
@@ -3,6 +3,10 @@
     src: url('@/assets/fonts/Roboto-Regular.ttf') format('truetype');
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--color-input);
